theme control fix jumping

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color-subtitles: #ffffff;
+  --color-theme: #8936FF;
 }
 
 body {
